# halite_bot

./: .gitignore  CMakeLists.txt  LICENSE  MyBot.cpp  README.md  bot_utils.cpp  buildabot.sh  movenc.cpp  movenc.hpp  routing.cpp  run_game.sh  tagabot.sh  zipbot.sh
bot/: log_utils.cpp  log_utils.hpp  movenc.hpp  planet_info.cpp  planet_info.hpp  routing.cpp  routing.hpp
bot_utils/: bot_utils.cpp  bot_utils.hpp  log_utils.cpp  log_utils.hpp  movenc.hpp  planet_info.cpp  planet_info.hpp  planet_ship_info.cpp  planet_ship_info.hpp  routing.cpp  routing.hpp
hlt/: hlt.hpp  hlt_in.hpp  log.hpp  map.hpp  move.hpp
